Repair displaying Expense pie-chart on mobile device.

--- a/styles.css
+++ b/styles.css
@@ -560,6 +560,7 @@ footer {
     justify-content: center;
     align-items: center;
     font-size: 10px;
+    padding: 4rem 0 2rem 0;
   }
 
   #comparison-exp {
