--- a/styles_main.css
+++ b/styles_main.css
@@ -167,7 +167,6 @@ main{
 
  @media only screen and (max-width: 768px) {
   .container-fluid {
-    scale: 0.8;
     justify-content: center;
     align-items:center;
   }
